Added "Start project!" button and fixed UI

--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -25,3 +25,8 @@
         </div>
     </div>
 }
+
+<a class="btn btn-outline-success" href="/Projects/New">
+    <i class="bi bi-tools"></i>
+    Start a project!
+</a>
