--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -17,19 +17,34 @@
 
 @foreach(Managr.Models.Project proj in ViewBag.Proiecte)
 {
-    <div>
-        <h3>
-            @proj.Name
-        </h3>
-        
-        <p>
-            @proj.Description
-        </p>
-        
-        <div>
-            <i class="bi bi-person"></i>
-            @proj.Organizer.UserName
+    <div class="card">
+        <div class="card-body">
+            <h3 class="card-title alert-primary py-3 px-3 rounded-2">
+                @proj.Name
+            </h3>
+
+            <div class="card-text">
+                @proj.Description
+            </div>
+
+            <div class="d-flex justify-content-between flex-row mt-5">
+                <div>
+                    <i class="bi bi-person"></i>
+                    @proj.Organizer.UserName
+                </div>
+
+                <i class="bi bi-calendar-heart"></i>
+                <span class="alert-warning">
+                    @proj.CreationDate
+                </span>
+            </div>
         </div>
+
+        <br />
+
+        <a class="btn btn-success" href="/Projects/Show/@proj.Id">
+            Open project
+        </a>
     </div>
 }
 
