--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -27,25 +27,40 @@
                 @proj.Description
             </div>
 
-            <div class="d-flex justify-content-between flex-row mt-5">
-                <div>
-                    <i class="bi bi-person"></i>
-                    @proj.Organizer.UserName
+            <div class="d-flex justify-content-around flex-row mt-5">
+                <div class="d-flex flex-column justify-content-center">
+                    <a class="btn btn-success" href="/Projects/Show/@proj.Id">
+                        Open project
+                    </a>
                 </div>
 
-                <i class="bi bi-calendar-heart"></i>
-                <span class="alert-warning">
-                    @proj.CreationDate
-                </span>
+                <div class="d-flex flex-column">
+                    <div class="alert-dark d-flex justify-content-between">
+                        <i class="bi bi-gear"></i>
+                        Project maintained by
+                        <i class="bi bi-gear"></i>
+                    </div>
+                    <div class="alert-dark d-flex justify-content-between">
+                        <i class="bi bi-person"></i>
+                        @proj.Organizer.UserName
+                        <i class="bi bi-person"></i>
+                    </div>
+                    <div class="alert-dark d-flex justify-content-between">
+                        <i class="bi bi-pencil"></i>
+                        and started on
+                        <i class="bi bi-pencil"></i>
+                    </div>
+                    <span class="alert-dark d-flex justify-content-between">
+                        <i class="bi bi-calendar-heart"></i>
+                        @proj.CreationDate
+                        <i class="bi bi-calendar-heart"></i>
+                    </span>
+                </div>
             </div>
         </div>
-
-        <br />
-
-        <a class="btn btn-success" href="/Projects/Show/@proj.Id">
-            Open project
-        </a>
     </div>
+
+    <br />
 }
 
 <a class="btn btn-outline-success" href="/Projects/New">
