Refactoring + Changed Project Views

--- a/Views/Projects/Edit.cshtml
+++ b/Views/Projects/Edit.cshtml
@@ -40,3 +40,28 @@
         <button class="btn btn-success" type="submit">Save Project!</button>
     }
 </div>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+
+<div class="alert alert-danger">
+    <div>
+        <h2>
+            Danger zone:
+        </h2>
+
+        <br />
+    
+        <a class="btn btn-outline-danger" href="/Projects/Delete/@Model.Id">
+            <i class="bi bi-trash"></i>
+            Delete project!
+        </a>
+
+        @*
+            In the future I will add project management change but it is not a priority
+        *@
+    </div>
+</div>
