--- a/Views/Projects/Show.cshtml
+++ b/Views/Projects/Show.cshtml
@@ -8,27 +8,35 @@
     A prettier Show will be added
 *@
 
-<h1>@Model.Name</h1>
+<h1 class="alert alert-primary">
+    @Model.Name
+</h1>
 
 <div>
     @Model.Description
 </div>
 
+<br />
+
 <div>
-    <i class="bi bi-person"></i>
-    This project is maintained by @Model.Organizer.UserName
-    <i class="bi bi-person"></i>
+    <div class="alert-dark d-flex justify-content-between">
+        <i class="bi bi-gear"></i>
+        This project is maintained by
+        <i class="bi bi-gear"></i>
+    </div>
+    <div class="alert-dark d-flex justify-content-between">
+        <i class="bi bi-person"></i>
+        @Model.Organizer.UserName
+        <i class="bi bi-person"></i>
+    </div>
+
+
 
     @if (ViewBag.UserId == @Model.OrganizerId || ViewBag.IsAdmin)
     {
         <a class="btn btn-outline-primary" href="/Projects/Edit/@Model.Id">
-            <i class="bi bi-pencil"></i>
+            <i class="bi bi-gear"></i>
             Edit project!
-        </a>
-        <br />
-        <a class="btn btn-outline-danger" href="/Projects/Delete/@Model.Id">
-            <i class="bi bi-trash"></i>
-            Delete project!
         </a>
     }
 </div>
