--- a/Views/Projects/New.cshtml
+++ b/Views/Projects/New.cshtml
@@ -28,7 +28,7 @@
         <br />
         // TODO: summernote here to expand customization possibilities for
         // project description
-        @Html.TextArea("Description", null, new { @class = "form-controll" })
+        @Html.TextArea("Description", null, new { @class = "form-control" })
 
         @Html.ValidationMessage("Description", null, new { @class = "text-danger" })
         <br />
