--- a/Views/Tasks/AssignUsers.cshtml
+++ b/Views/Tasks/AssignUsers.cshtml
@@ -4,22 +4,31 @@
 
     <a class="btn btn-outline-success" href="/Tasks/Show/@Model.Id">Show Task</a>
     <br />
-    <a class="btn btn-outline-success" href="/Tasks/ShowUsers/@Model.Id">Show Assigned Users</a>
-    <br />
-
-</div>
-
-<div class="card w-50">
-    @foreach (var adduser in ViewBag.UsersToAdd)
+    @if (ViewBag.NonZeroAssigned)
     {
-        <div class="d-flex justify-content-between flex-row">
-            <p>@adduser.UserName</p>
-            <form method="post" asp-controller="Tasks" asp-action="AddUser">
-                <input type="hidden" name="TaskId" value="@Model.Id" />
-                <input type="hidden" name="UserId" value="@adduser.Id" />
-                <button class="btn btn-outline-success" type="submit"><i class="bi bi-person-plus"></i> Add User</button>
-            </form>
-        </div>
-        <br/>
+        <a class="btn btn-outline-success" href="/Tasks/ShowUsers/@Model.Id">Show Assigned Users</a>
+        <br />
     }
+
 </div>
+
+@foreach (var adduser in ViewBag.UsersToAdd)
+{
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <div class="d-flex justify-content-between flex-row">
+                    <p>@adduser.UserName</p>
+                    <form method="post" asp-controller="Tasks" asp-action="AddUser">
+                        <input type="hidden" name="TaskId" value="@Model.Id" />
+                        <input type="hidden" name="UserId" value="@adduser.Id" />
+                        <button class="btn btn-outline-success" type="submit"><i class="bi bi-person-plus"></i> Add User</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
+    <hr/>
+}
