--- a/Views/Projects/Show.cshtml
+++ b/Views/Projects/Show.cshtml
@@ -45,9 +45,18 @@
     }
 </div>
 
-<br/>
+<br />
 
-@foreach (var task in Model.Tasks)
+<form method="GET">
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Search topics or keywords" name="search" value="@ViewBag.SearchString">
+        <button class="btn btn-outline-success" type="submit">Search Task</button>
+    </div>
+</form>
+
+<br />
+
+@foreach (var task in ViewBag.Tasks)
 {
     <div class="card">
         <div class="card-body">
