--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -11,7 +11,7 @@
 
 <h1>Projects</h1>
 
-@foreach(Managr.Models.Project proj in ViewBag.Proiecte)
+@foreach (Managr.Models.Project proj in ViewBag.Proiecte)
 {
     <div class="card">
         <div class="card-body">
@@ -36,11 +36,20 @@
                         Project maintained by
                         <i class="bi bi-gear"></i>
                     </div>
-                    <div class="alert-dark d-flex justify-content-between">
-                        <i class="bi bi-person"></i>
-                        @proj.Organizer.UserName
-                        <i class="bi bi-person"></i>
-                    </div>
+                    @if (@proj.Organizer != null)
+                    {
+                        <div class="alert-dark d-flex justify-content-between">
+                            <i class="bi bi-person"></i>
+                            @proj.Organizer.UserName
+                            <i class="bi bi-person"></i>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="alert-danger">
+                            There was an error getting project data. We suggest contacting an admin
+                        </div>
+                    }
                     <div class="alert-dark d-flex justify-content-between">
                         <i class="bi bi-pencil"></i>
                         and started on
