--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,4 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    We only store data about registered users, created projects and tasks. No data used for analytics is stored by Managr. We care about your privacy <3.
+</p>
